[jOOQ/jOOQ#11808] Make sure the SQL in MetaSQL is dialect version specific